compatibility for FF added, flickering on body-fix fixed

--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,13 @@ body {
 
     &.fixed {
         overflow: hidden;
+        padding-right: 5px;
+    }
+
+    @-moz-document url-prefix() {
+        &.fixed {
+            padding-right: 17px;
+        }
     }
 }
 
@@ -40,90 +47,13 @@ body::-webkit-scrollbar-track {
     border-radius: 47px;
 }
 
-// a {
-//     z-index: 10;
-//     font-family: $comforter, sans-serif;
-//     text-decoration: none;
-//     font-size: 3rem;
-//     color: #e935a1;
-//     position: relative;
-
-//     animation-name: neonmain;
-//     animation-duration: 3s;
-//     animation-iteration-count: infinite;
-//     animation-timing-function: cubic-bezier(0, 1.48, 1, 0.68);
-
-//     &:hover {
-//         color: white;
+// @supports (display: grid) {
+//     div {
+//       display: grid;
 //     }
-
-//     &:hover::before {
-//         transform: scale(1.3);
-//         filter: blur(10px);
+//   }
+//   @supports not (display: grid) {
+//     div {
+//       float: right;
 //     }
-
-//     &::before {
-//         content: "Simple";
-//         font-family: $comforter, sans-serif;
-//         text-decoration: none;
-//         font-size: 3rem;
-//         color: #e935a1;
-
-//         position: absolute;
-//         z-index: -1;
-
-//         animation-name: neonbefore;
-//         animation-duration: 3s;
-//         animation-iteration-count: infinite;
-//         animation-timing-function: cubic-bezier(0, 1.48, 1, 0.68);
-//     }
-// }
-
-// @keyframes neonmain {
-//     0% {
-//         color: white;
-//     }
-//     30% {
-//         color: #e935a1;
-//     }
-//     60%,
-//     70%,
-//     80% {
-//         color: white;
-//     }
-//     65%,
-//     75%,
-//     85% {
-//         color: #e935a1;
-//     }
-//     100% {
-//         color: white;
-//     }
-// }
-
-// @keyframes neonbefore {
-//     0% {
-//         transform: scale(1.3);
-//         filter: blur(10px);
-//     }
-//     30% {
-//         transform: scale(1);
-//         filter: blur(0px);
-//     }
-//     60%,
-//     70%,
-//     80% {
-//         transform: scale(1.3);
-//         filter: blur(10px);
-//     }
-//     65%,
-//     75%,
-//     85% {
-//         transform: scale(1);
-//         filter: blur(0px);
-//     }
-//     100% {
-//         transform: scale(1);
-//         filter: blur(0px);
-//     }
-// }
+//   }
